cmake_minimum_required(VERSION 3.21)
project(graph_algorithms)
set(CMAKE_CXX_STANDARD 14)
include_directories(.)
add_executable(kruskal kruskal.cpp graph.cpp graph.h min_refueling_stops.cpp remove_min_cost_nodes.cpp)
add_executable(prim prim_dijkstra.cpp)
add_executable(blmn_Frd bellman_ford.cpp)
add_executable(topo dfs_bfs_topo.cpp graph_2.cpp graph_2.h)
add_executable(min_r min_refueling_stops.cpp)
